--- a/app/modules/authentication/views/getstarted.html
+++ b/app/modules/authentication/views/getstarted.html
@@ -18,10 +18,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="fin-btn-group">
-				<button class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>GO BACK</button>
-				<button class="fin-app-btn fin-orange" click-redirect="/riskAssesment">CONTINUE</button>
-			</div>
 		</div>
 	</div>
 	<div class="bubble">
@@ -53,6 +49,15 @@
 		<div class="dot-cover">
 			<div class="dot">
 			</div>
+		</div>
+	</div>
+</div>
+<div class="col-xs-12">
+	<div class="fin-btn-cover started">
+		<div class="fin-btn-group">
+			<button ng-click="back()" class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>GO BACK</button>
+			<button ng-if="!loggedIn" click-redirect="/registration" class="fin-app-btn fin-white content-next">SKIP TO REGISTRATION</button>
+			<button class="fin-app-btn fin-orange" click-redirect="/riskAssesment">CONTINUE</button>
 		</div>
 	</div>
 </div>
