--- a/app/modules/authentication/views/login.html
+++ b/app/modules/authentication/views/login.html
@@ -32,5 +32,6 @@
 				<button class="fin-app-btn fin-signIn"><span class="sign-img"><img src="assets/images/gSignIn.png"></span><span>SIGN IN WITH GOOGLE</span></button>
 			</div>
 		</form>
+		<div ng-if="errorMessage" class="form-error"><p ng-bind="errorMessage"></p></div>
 	</div>
 </div>
