--- a/less/gettingStarted.less
+++ b/less/gettingStarted.less
@@ -56,6 +56,18 @@
         }
     }
 }
+.fin-btn-cover{
+  &.started{
+    float:left;
+    width:44%;
+    padding-left:5%;
+    .fin-app-btn{
+      width: 35%;
+      margin-right: 3%;
+      padding: 3%;
+    }
+  }
+}
 @keyframes move{
   0% {
     transform:translateY(0px);
