--- a/app/modules/common/views/header.html
+++ b/app/modules/common/views/header.html
@@ -6,9 +6,16 @@
         </div>
         <h1 ng-if="title" ng-bind="title"></h1>
           <ul class="nav navbar-nav navbar-right">
-            <li ng-if="!getStarted && !menu"><a href="#/gettingStarted" class="fin-btn start-btn">GET STARTED</a></li>
-            <li ng-if="getStarted && !menu"><p>Already have an account?</p></li>
-            <li ng-if="!menu"><a href="javascript:void(0)" click-redirect="/" class="fin-link log-in">LOG IN</a></li>
+            <li ng-if="(!getStarted && !menu) && !loggedIn"><a href="#/gettingStarted" class="fin-btn start-btn">GET STARTED</a></li>
+            <li ng-if="(getStarted && !menu) && !loggedIn"><p>Already have an account?</p></li>
+            <li ng-if="!menu && !loggedIn"><a href="javascript:void(0)" click-redirect="/" class="fin-link log-in">LOG IN</a></li>
+            <li ng-if="loggedIn" class="dropdown fin-dropdown"><a href="javascript:void(0)" class="fin-link log-in" data-toggle="dropdown"><span class="label">Logged in as </span><span class="name" ng-bind="userDetails.user['name']" ng-if="(userDetails.user['name'] !='')&&(userDetails.user['email'] =='')"></span>
+            <span class="name" ng-bind="userDetails.user['email']" ng-if="(userDetails.user['email'] !='')&&(userDetails.user['name'] =='')"></span><span class="up"></span><span class="down"></span></a>
+              <ul class="fin-dropdown-menu">
+                <li><a href="javascript:void(0)">Account Settings</a></li>
+                <li><a href="javascript:void(0)" ng-click="userLogout()">Log Out</a></li>
+              </ul>
+            </li>
             <li><a href="javascript:void(0)" class="fin-link menu">MENU <span class="menu-icon"></span></a></li>
           </ul>
       </div>
