--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -220,7 +220,8 @@
                 <p class="more-questions">Would you like to answer some more questions to fine tune your score?</p>
                 <div class="fin-btn-group answer-more">
                     <button ng-click="gotoMoreQuestion()" class="fin-app-btn fin-orange content-next">YES, I'D LIKE THAT</button>
-                    <button class="fin-app-btn fin-white content-next">NO THANKS, LET'S CONTINUE TO NEXT STEP</button>
+                    <button ng-if="!loggedIn" click-redirect="/registration" class="fin-app-btn fin-white content-next">NO THANKS, LET'S CONTINUE TO NEXT STEP</button>
+                    <button ng-if="loggedIn" click-redirect="/dashboard" class="fin-app-btn fin-white content-next">NO THANKS, LET'S CONTINUE TO NEXT STEP</button>
                     <button ng-click="gotoFirst(0);(step = 1)" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>I'D LIKE TO TRY AGAIN</button>
                 </div>
             </div>
@@ -231,7 +232,7 @@
         <p>Risk Assessment</p>
     </div>    
     <div class="fin-btn-group gotoPages" ng-show="$root.lastSlide">
-        <button class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png" ng-click="(step!=1) && (step = step - 1)"></span>BACK</button>
+        <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
         <button ng-show="step == 1" ng-disabled="riskAssesment1Form1.$invalid" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="step == 2" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="step == 3" ng-disabled="riskAssesment1Form2.$invalid" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
@@ -470,8 +471,8 @@
                 </div>
                 <div class="fin-btn-group answer-more addMargin">
                     <button click-redirect="/riskAssesment" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>I'D LIKE TO TRY AGAIN</button>
-                    <button ng-if="true" class="fin-app-btn fin-orange content-next">SIGN UP</button>
-                    <button ng-if="false" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+                    <button ng-if="!loggedIn" click-redirect="/registration" class="fin-app-btn fin-orange content-next">SIGN UP</button>
+                    <button ng-if="loggedIn" click-redirect="/dashboard" class="fin-app-btn fin-orange content-next">CONTINUE</button>
                 </div>
             </div>
         </div>
@@ -481,7 +482,7 @@
         <p>Risk Assessment</p>
     </div>    
     <div class="fin-btn-group gotoPages" ng-show="$root.lastSlide">
-        <button class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png" ng-click="(step!=1) && (step = step - 1)"></span>BACK</button>
+        <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
         <button ng-show="step == 1" ng-disabled="riskAssesment2Form1.$invalid" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="step == 2" ng-disabled="riskAssesment2Form2.$invalid" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="step == 3" ng-disabled="riskAssesment2Form3.$invalid" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
