--- a/less/common.less
+++ b/less/common.less
@@ -100,6 +100,138 @@ header{
 
 				}
 			}
+			.fin-dropdown{
+				position:relative;
+				.fin-dropdown-menu{
+					position:absolute;
+					transition: all 300ms ease;
+					list-style: none;
+					height: 0px;
+					overflow: hidden;
+					top:0px;
+					margin-top: auto;
+					margin-bottom: auto;
+					bottom: 0px;
+					padding-left:10%;
+					padding-right:36px;
+					border-radius: 30px;
+					width: 100%;
+					background-image: -moz-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+					background-image: -webkit-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+					box-shadow: 1px 5.33px 11px -4px rgb( 36, 122, 188 );
+					text-align: right;
+					li{
+						a{
+							.GLOBAL_FONT_STYLE('Roboto-Bold',@lochmaraapprox,normal);
+							.PIXEL2EM(16);
+							display: block;
+							text-decoration: none;
+							opacity: 0;
+							transition: all 0.2s ease;
+							transform:translateX(-100%);
+						}
+						&:not(:last-child){
+							margin-bottom: 10px;
+						}
+					}
+				}
+				a{
+					text-decoration: none;
+					span{
+						&.label{
+							.GLOBAL_FONT_STYLE('Roboto-Light',@black,normal)!important;
+							opacity: 0.7;
+							.PIXEL2EM(16);
+						}
+						&.name{
+
+						}
+						&.up{
+							display: inline-block;
+							width: 10px;
+							height: 6px;
+							opacity: 0;
+							background-image:url('../images/nav-up.png');
+							background-position: center;
+							background-size: 100% 100%;
+							position: relative;
+							top: -3px;
+							right:-10px;
+							transition: all 0.2s ease;
+						}
+						&.down{
+							display: inline-block;
+							width: 10px;
+							height: 6px;
+							opacity: 1;
+							background-image:url('../images/nav-down.png');
+							background-position: center;
+							background-size: 100% 100%;
+							position: relative;
+							top: -3px;
+							transition: all 0.2s ease;
+						}
+					}
+				}
+				&.open{
+					.fin-dropdown-menu{
+						z-index: 1;
+						top: 42px;
+						height: 152px;
+						padding-top: 80px;
+						padding-bottom: 14%;
+						li{
+							a{
+								opacity: 1;
+								transform: translateX(0px);
+							}
+							&:nth-child(1){
+								a{
+									transition-delay: 0.2s;
+								}								
+							}
+							&:nth-child(2){
+								a{
+									transition-delay: 0.3s;
+								}								
+							}
+						}
+					}
+					> a{
+						background-color:transparent;
+						z-index: 2;
+					}
+					a{
+						span{
+							&.up{
+								opacity: 1;
+							}
+							&.down{
+								opacity: 0;
+							}
+						}
+					}
+				}
+			}
+			/*.dropdown{
+				.dropdown-menu{
+					width:100%;
+					min-width:auto;
+					height:0px;
+					transition:all 5s ease;
+					overflow:hidden;
+					li{
+						a{
+							white-space:pre-line;
+						}
+					}
+				}
+				&.open{
+					.dropdown-menu{
+						height:auto;
+					}
+				}
+			}*/
 		}
 		@media @below768{
 			padding-top:6%;
@@ -616,10 +748,10 @@ button[disabled]{
 	margin-right: 10px;
 }
 
-.radio-cover{
+.radio-cover,.checkbox-cover{
     width: 100%;
     float: left;
-	input[type="radio"] {
+	input[type="radio"],input[type="checkbox"] {
 	    display:none;
 	    + label{
 	    	.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
@@ -729,4 +861,53 @@ form{
 		width:100%;
 		margin-top:10%;
 	}
+}
+span.nextline{
+	display:block;
+}
+span.redirect{
+	cursor:pointer;
+	.GLOBAL_FONT_STYLE('Roboto-Regular',@lochmaraapprox,normal);
+	.PIXEL2EM(16);
+}
+.form-error{
+	width:100%;
+	float:left;
+	padding:5%;
+	border-radius:6px;
+	margin-top:5%;
+	border:1px solid #f1efef;
+	background-color:rgba(253,232,222,0.5);
+	p{
+		color: @flamingoapprox;
+		text-align:center;
+		margin-bottom:0px;
+	}	
+}
+
+@keyframes makeDropdown{
+
+  /*0%{
+  	padding-top: 0%;
+  }
+  25%{
+  	padding-top: 5%;
+  	padding-left: 2%;
+  	padding-right: 2%
+  }
+  50% {
+    padding-top: 10%;
+    padding-left: 5%;
+	padding-right: 5%
+  }
+  75%{
+  	padding-top: 20%;
+  	padding-left: 10%;
+	padding-right: 10%;
+  }
+  100%{
+  	padding-top: 20%;
+  	padding-left: 10%;
+	padding-right: 10%;
+  }*/
 }
