Completed plan investment UI

--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -18,7 +18,7 @@
 				<h4 class="text-center">Below Average Risk taker</h4>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover">
+				<div class="goals-cover" click-redirect="/planInvest">
 					<div class="image-div">
 						<img src="assets/images/dashboardImage2.png">
 					</div>
