--- a/app/assets/css/fonts.css
+++ b/app/assets/css/fonts.css
@@ -17,6 +17,15 @@
        url('../fonts/PlayfairDisplay-Regular/PlayfairDisplay-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 @font-face {
+  font-family: 'PlayfairDisplay-Bold';
+  src: url('../fonts/PlayfairDisplay-Bold/PlayfairDisplay-Bold.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/PlayfairDisplay-Bold/PlayfairDisplay-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/PlayfairDisplay-Bold/PlayfairDisplay-Bold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/PlayfairDisplay-Bold/PlayfairDisplay-Bold.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/PlayfairDisplay-Bold/PlayfairDisplay-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/PlayfairDisplay-Bold/PlayfairDisplay-Bold.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+@font-face {
   font-family: 'Roboto-Bold';
   src: url('../fonts/Roboto-Bold/Roboto-Bold.eot'); /* IE9 Compat Modes */
   src: url('../fonts/Roboto-Bold/Roboto-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
