--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -65,8 +65,22 @@ header .navbar h1 {
   right: 0;
   margin-left: auto;
   margin-right: auto;
+  top: 20%;
   width: 20%;
   text-align: center;
+}
+header .navbar h1 span.nextline {
+  cursor: pointer;
+  font-family: 'Roboto-Bold';
+  color: #F26529;
+  font-weight: normal;
+  font-size: 0.625em;
+  margin-top: 3%;
+}
+@media only screen and (max-width:768px) {
+  header .navbar h1 {
+    width: 50%;
+  }
 }
 header .navbar .navbar-right {
   margin-top: 10px;
@@ -919,6 +933,22 @@ section.introduction.about-app a {
 }
 .fin-app-btn.full-width {
   width: 100%;
+}
+.fin-app-btn.fin-blue {
+  background-image: -moz-linear-gradient(90deg, #247abc 0%, #247abc 100%);
+  background-image: -webkit-linear-gradient(90deg, #247abc 0%, #247abc 100%);
+  -webkit-box-shadow: 1.5px 2.33px 1px 0px #247abc;
+     -moz-box-shadow: 1.5px 2.33px 1px 0px #247abc;
+          box-shadow: 1.5px 2.33px 1px 0px #247abc;
+  font-family: 'PlayfairDisplay-Regular';
+  color: #fff;
+  font-weight: normal;
+  font-size: 1.5em;
+}
+.fin-app-btn.fin-blue:hover {
+  -webkit-box-shadow: 2.5px 4.33px 4px 0px #247abc;
+     -moz-box-shadow: 2.5px 4.33px 4px 0px #247abc;
+          box-shadow: 2.5px 4.33px 4px 0px #247abc;
 }
 button[disabled] {
   opacity: 0.4;
@@ -2692,6 +2722,7 @@ section.dashboard .goals-outer-cover h4 {
   margin-top: 0px;
 }
 section.dashboard .goals-cover {
+  cursor: pointer;
   position: relative;
   width: 100%;
   -webkit-border-radius: 25px;
@@ -2741,4 +2772,135 @@ section.dashboard .goals-cover .checkbox-cover label span {
     margin-right: 0px;
     margin-bottom: 5%;
   }
+}
+section.planinvest {
+  padding-top: 3%;
+  padding-bottom: 2%;
+  padding-left: 6%;
+  padding-right: 6%;
+}
+section.planinvest h1 {
+  font-family: 'PlayfairDisplay-Regular';
+  color: #000;
+  font-weight: normal;
+  font-size: 2.25em;
+  margin-top: 0;
+  margin-bottom: 4%;
+  opacity: 0.7;
+}
+section.planinvest .invest-outer-cover .investCover {
+  position: relative;
+  width: 100%;
+  height: 234px;
+  margin: 0 auto;
+  display: table;
+}
+section.planinvest .invest-outer-cover .investCover .image-div {
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+section.planinvest .invest-outer-cover .investCover .image-div img {
+  width: 100%;
+}
+section.planinvest .invest-outer-cover .investCover.has-covered {
+  background-color: #f0f4f7;
+}
+section.planinvest .invest-outer-cover .investCover.has-covered .checkbox-cover {
+  display: block;
+}
+section.planinvest .invest-outer-cover .investCover .checkbox-cover {
+  display: none;
+  position: absolute;
+  top: -10px;
+  left: 0px;
+  right: 0px;
+  text-align: center;
+}
+section.planinvest .invest-outer-cover .investCover .checkbox-cover label {
+  opacity: 1;
+}
+section.planinvest .invest-outer-cover .investCover .checkbox-cover label span {
+  background-color: #1a78b9;
+  opacity: 1;
+  -webkit-background-size: 45% 36%;
+     -moz-background-size: 45% 36%;
+       -o-background-size: 45% 36%;
+          background-size: 45% 36%;
+}
+section.planinvest .invest-outer-cover button {
+  position: absolute;
+  bottom: -21px;
+  left: 0px;
+  right: 0px;
+  width: 87%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 3%;
+}
+section.planinvest .invest-outer-cover:nth-child(1) .image-div img {
+  width: 70%;
+}
+section.planinvest .invest-outer-cover:nth-child(2) .image-div img {
+  width: 57%;
+}
+section.planinvest .invest-outer-cover:nth-child(3) .image-div img {
+  width: 45%;
+}
+section.planinvest .invest-outer-cover:nth-child(4) .image-div img {
+  width: 80%;
+}
+section.planinvest .invest-outer-cover .desc {
+  margin-top: 20%;
+}
+section.planinvest .invest-outer-cover .desc p {
+  font-family: 'Roboto-Light';
+  color: #303030;
+  font-weight: normal;
+  font-size: 1em;
+  margin-bottom: 12%;
+  height: 50px;
+}
+section.planinvest .invest-outer-cover .desc h3 {
+  font-family: 'PlayfairDisplay-Bold';
+  color: #303030;
+  font-weight: normal;
+  font-size: 1.125em;
+  margin-bottom: 10px;
+}
+section.planinvest .invest-outer-cover .desc h4 {
+  font-family: 'Roboto-Light';
+  color: #047BC1;
+  font-weight: normal;
+  font-size: 1.125em;
+}
+section.planinvest .bottom-desc {
+  text-align: center;
+  margin-top: 3%;
+  float: left;
+}
+section.planinvest .bottom-desc p {
+  font-family: 'PlayfairDisplay-Regular';
+  color: #000;
+  font-weight: normal;
+  font-size: 1.5em;
+  margin-bottom: 2%;
+}
+section.planinvest .bottom-desc .fin-btn-group {
+  text-align: center;
+}
+section.planinvest .bottom-desc .fin-btn-group button {
+  float: none;
+  width: 15%;
+  padding: 20px 0px;
+}
+section.planinvest .bottom-desc h4 {
+  width: 100%;
+  font-family: 'Roboto-Bold';
+  color: #F26529;
+  font-weight: normal;
+  font-size: 1em;
+  margin-top: 2%;
 }
