--- a/app/modules/common/views/header.html
+++ b/app/modules/common/views/header.html
@@ -4,7 +4,7 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="javascript:void(0)" click-redirect="/"><img src="assets/images/logo.png"></a>
         </div>
-        <h1 ng-if="title" ng-bind="title"></h1>
+        <h1 ng-if="title"><span class="mainTitle" ng-bind="title"></span><span class="nextline" ng-bind="subHeader" click-redirect="{{redirectURL}}"></span></h1>
           <ul class="nav navbar-nav navbar-right">
             <li ng-if="(!getStarted && !menu) && !loggedIn"><a href="#/gettingStarted" class="fin-btn start-btn">GET STARTED</a></li>
             <li ng-if="(getStarted && !menu) && !loggedIn"><p>Already have an account?</p></li>
