--- a/less/common.less
+++ b/less/common.less
@@ -81,8 +81,20 @@ header{
 			right: 0;
 			margin-left: auto;
 			margin-right: auto;
+			top:20%;
 			width: 20%;
 			text-align: center;
+			span{
+				&.nextline{
+					cursor:pointer;
+					.GLOBAL_FONT_STYLE('Roboto-Bold',@flamingoapprox,normal);
+    				.PIXEL2EM(10);
+    				margin-top:3%;
+				}
+			}
+			@media @below768{
+				width:50%;
+			}
 		}
 		.navbar-right{
 			margin-top:10px;
@@ -724,6 +736,16 @@ section{
 	}
 	&.full-width{
 		width:100%;
+	}
+	&.fin-blue{
+		background-image: -moz-linear-gradient( 90deg, #247abc 0%, #247abc 100%);
+		background-image: -webkit-linear-gradient( 90deg, #247abc 0%, #247abc 100%);
+		box-shadow: 1.5px 2.33px 1px 0px #247abc;
+		.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@white,normal);
+		.PIXEL2EM(24);
+		&:hover{
+			box-shadow: 2.5px 4.33px 4px 0px #247abc;
+		}
 	}
 }
 button[disabled]{
