--- a/less/planinvset.less
+++ b/less/planinvset.less
@@ -50,6 +50,20 @@ section{
 						}
 					}
 				}
+				.cloud1,.cloud2{
+					position:absolute;
+				}
+				.cloud1{
+					bottom: 19%;
+					left: -22%;
+				}
+				.cloud2{
+					right: -20%;
+					top: 5%;
+				}
+				@media @above1400{
+					height:350px;
+				}
 			}
 			button{
 				position: absolute;
