--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -4,6 +4,8 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
 				<div class="investCover has-covered">
+					<div class="cloud1"><img src="assets/images/login_cloud1.png"></div>
+					<div class="cloud2"><img src="assets/images/login_cloud2.png"></div>
 					<div class="checkbox-cover">
 						<input type="checkbox" name>
 						<label><span></span></label>
