--- a/less/common.less
+++ b/less/common.less
@@ -6,6 +6,7 @@
 .PIXEL2EM(@px) {
 	font-size: (@px/16)+0em;
 }
+@above1400: ~"only screen and (min-width:1400px)";
 @below768: ~"only screen and (max-width:768px)";
 @below600: ~"only screen and (max-width:600px)";
 @below601-768: ~"only screen and (min-width:601px) and (max-width:768px)";
