--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -13,7 +13,7 @@
 					<div class="image-div">
 						<img src="assets/images/planInvestMent.png">
 					</div>	
-					<button class="fin-app-btn fin-blue full-width">Quick Invest</button>				
+					<button click-redirect="/quickInvest" class="fin-app-btn fin-blue full-width">Quick Invest</button>				
 				</div>
 				<div class="col-xs-12 desc">
 					<p class="text-center">Simply Build Wealth through monthly<span class="nextline">SIP or one-time lumpsum investment or both.</span></p>
