--- a/less/common.less
+++ b/less/common.less
@@ -20,7 +20,7 @@
 @alabasterapprox:#f9f9f9;
 @concretesolid:#f2f2f2;
 @black:#000;
-@blackapprox:#010101;
+@blackapprox:#101010;
 @white:#fff;
 /*COLOR END*/
 
@@ -770,7 +770,9 @@ button[disabled]{
 	}
 	margin-right: 10px;
 }
-
+.width-100{
+	width:100%!important;
+}
 .radio-cover,.checkbox-cover{
     width: 100%;
     float: left;
@@ -886,7 +888,7 @@ form{
 	}
 }
 span.nextline{
-	display:block;
+	display:block!important;
 }
 span.redirect{
 	cursor:pointer;
