--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -7,6 +7,13 @@ section{
 		.goals-outer-cover{
 			width:22%;
 			float:left;
+			&:nth-child(1){
+				.image-div{
+					img{
+						width:104%;
+					}
+				}
+			}
 			&:nth-child(2){
 				.image-div{
 					img{
@@ -17,7 +24,14 @@ section{
 			&:nth-child(3){
 				.image-div{
 					img{
-						width:90%;
+						width:95%;
+					}
+				}
+			}
+			&:nth-child(4){
+				.image-div{
+					img{
+						width:81%;
 					}
 				}
 			}
