--- a/less/planinvset.less
+++ b/less/planinvset.less
@@ -147,4 +147,55 @@ section{
 			}
 		}	
 	}
+	&.quickInvest{
+		padding-top:3%;
+		padding-bottom:2%;
+		padding-left:6%;
+		padding-right:6%;
+		.started{
+			padding-left:0px;
+			padding-top:2%;
+		}
+	}
 }
+
+.type2Sliders{
+  	.swiper-content{
+    	float:left;
+    	p{
+    		width:86%;
+    		.PIXEL2EM(24)!important;
+    	}
+    	span{
+    		&.normal{
+    			.PIXEL2EM(26)!important;
+    		}
+    	}
+	}
+
+}
+.content-main-header{
+  width:100%;
+  float:left;
+  .slider-entry-image{
+    width:10%;
+    float:left;
+    img{
+      width:100%;
+    }
+  }
+  h1{
+    width:100%;
+    .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
+    .PIXEL2EM(36);
+  }
+  h2{
+    .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
+    .PIXEL2EM(22);
+    opacity:0.7;
+    width:100%;
+    line-height: 26px;
+    margin-top: 1%;
+    margin-bottom:2%;
+  }
+}    
