--- a/less/swiper.less
+++ b/less/swiper.less
@@ -9,7 +9,7 @@
         align-items:center;
         position:absolute;
         right: -7px;
-        top: 180px;
+        top: 160px;
         width:20px;
         z-index: 10;
     }
@@ -63,22 +63,25 @@
     }
     &.customSwiper{
       .typeSwiper{
+        width:133px;
         position:absolute;
         top:0px;
         right:0px;
         .image-backdrop{
+          text-align:right;
           img{
-            width:100%;
+            width:80%;
           }
-          margin-bottom:20%;
+          margin-bottom:10%;
         }
         p{
           .GLOBAL_FONT_STYLE('Roboto-Bold',@flamingoapprox,normal);
-          font-size:16px;       
+          font-size:16px;  
+          text-align:right;     
         }
       }  
       .swiper-content{
-        padding-bottom:10%;
+        padding-bottom:12%;
         p{
           .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
           .PIXEL2EM(18);
@@ -89,6 +92,29 @@
               width:4%;
               margin-left: 5px;
               margin-right: 5px;
+            }
+            &.year{
+              width:10%;
+              margin-left: 5px;
+              margin-right: 5px;
+            }
+            &.normal{
+              input{
+                text-align:left!important;
+              }
+              &.currency{
+                position: relative;
+                input{
+                  padding-left:5%;
+                }
+                span{
+                  &.currency{
+                    position:absolute;
+                    bottom:3px;
+                    color:@marinerapprox;
+                  }
+                }
+              }
             }
             input{
               .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@marinerapprox,normal);
@@ -250,6 +276,9 @@
       } 
     }
 }
+.swiper-slide {
+  overflow:hidden;
+}
 /*.swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -266,4 +295,34 @@
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
+}*/
+
+/*.type2Sliders{
+  .swiper-content{
+    float:left;
+    .content-main-header{
+      width:100%;
+      float:left;
+      .slider-entry-image{
+        width:10%;
+        float:left;
+        img{
+          width:100%;
+        }
+      }
+      h1{
+        width:100%;
+        .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
+        .PIXEL2EM(36);
+      }
+      h2{
+        .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal);
+        .PIXEL2EM(24);
+        opacity:0.7;
+        width:100%;
+        line-height: 26px;
+        margin-top: 1%;
+      }
+    }    
+  } 
 }*/
